<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/app_main_theme"
    tools:context=".Main">

    <TextView
        android:id="@+id/textView"
        style="@style/app_main_text"
        android:layout_width="166dp"
        android:layout_height="77dp"
        android:textStyle="bold"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/main_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/phone"
        android:layout_width="109dp"
        android:layout_height="105dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_phone"
        app:srcCompat="@drawable/demo_phone"
        android:contentDescription="@string/phone" />

    <Button
        android:id="@+id/button_destroy"
        style="@style/app_main_button"
        android:layout_width="166dp"
        android:layout_height="54dp"
        android:layout_marginTop="8dp"
        android:onClick="destroy_phone"
        android:text="@string/destroy_phone_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone" />

    <TextView
        android:id="@+id/current_phone"
        style="@style/app_main_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        style="@style/app_main_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/current_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="159dp" />

    <Button
        android:id="@+id/rice_button"
        style="@style/app_main_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="192dp"
        android:onClick="to_rice_bowl"
        android:text="@string/rice_bowl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_destroy" />
</androidx.constraintlayout.widget.ConstraintLayout>